# switch-poke-pilot

./: .gitignore  LICENSE  Makefile  README.md  SwitchPokePilot.spec  config.ini  pyproject.toml  requirements.txt
.github/workflows/: release-binary.yaml
assets/icon/: icon.icns
examples/: SwitchPokePilot.config.json
examples/SwitchPokePilot/: config.json
switchpokepilot/: __init__.py  __main__.py  camera.py  config.py  config_example.py  exceptions.py  info.py  logger.py  state.py  switch_poke_pilot.py
switchpokepilot/api/: __init__.py
switchpokepilot/api/command/: command.py  config.py  controller.py  extensions.py  image.py  logger.py  timer.py  video.py
switchpokepilot/app/: controller_process.py  info.py  logger.py  main_window.py  state.py  switch_poke_pilot.py  switchpokepilot.py  version.py
switchpokepilot/app/mainwindow/: logger.py  main_window.py  process.py  state.py
switchpokepilot/app/ui/: capture_area.py  command_area.py  game_screen.py  log_area.py  theme.py
switchpokepilot/command/: loader.py  runner.py
switchpokepilot/commands/: command.py  loader.py  masha.py  runner.py
switchpokepilot/controller/: controller.py  serial.py
switchpokepilot/core/: camera.py  logger.py  state.py  timer.py
switchpokepilot/core/path/: path.py
switchpokepilot/mainwindow/: logger.py  main_window.py  process.py  state.py
switchpokepilot/ui/: appbar.py  button.py  capture_area.py  capturearea.py  command_area.py  commandarea.py  dropdown.py  game_screen.py  gamescreen.py  log_area.py  logarea.py
switchpokepilot/utils/: device.py  logger.py  os.py
(+43 files in other folders)
